force-app/main/default/objects/ZB2B_PRICE1__x/ZB2B_PRICE1__x.object-meta.xml
<CustomObject>
    <externalDataSource>SAP</externalDataSource>
    <externalName>ZB2B_PRICE1Set</externalName>
    <label>ZB2B_PRICE1</label>
    <pluralLabel>ZB2B_PRICE1Set</pluralLabel>
</CustomObject>