force-app/main/default/objects/ZB2B_PRICE1__x/fields/Bzirk__c.field-meta.xml
<CustomField>
    <fullName>Bzirk__c</fullName>
    <description>Bzirk</description>
    <externalDeveloperName>Bzirk</externalDeveloperName>
    <label>Bzirk</label>
    <length>6</length>
    <type>Text</type>
</CustomField>