force-app/main/default/objects/ZB2B_PRICE1__x/fields/Moneda__c.field-meta.xml
<CustomField>
    <fullName>Moneda__c</fullName>
    <description>Moneda</description>
    <externalDeveloperName>Moneda</externalDeveloperName>
    <label>Moneda</label>
    <length>5</length>
    <type>Text</type>
</CustomField>