force-app/main/default/objects/ZB2B_PRICE1__x/fields/PrecioUMV__c.field-meta.xml
<CustomField>
    <fullName>PrecioUMV__c</fullName>
    <description>PrecioUMV</description>
    <externalDeveloperName>PrecioUMV</externalDeveloperName>
    <label>PrecioUMV</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>