force-app/main/default/objects/ZB2B_PRICE1__x/fields/UMV__c.field-meta.xml
<CustomField>
    <fullName>UMV__c</fullName>
    <description>UMV</description>
    <externalDeveloperName>UMV</externalDeveloperName>
    <label>UMV</label>
    <length>3</length>
    <type>Text</type>
</CustomField>