force-app/main/default/objects/ZB2B_PRICE1__x/fields/Uprecio__c.field-meta.xml
<CustomField>
    <fullName>Uprecio__c</fullName>
    <description>Uprecio</description>
    <externalDeveloperName>Uprecio</externalDeveloperName>
    <label>Uprecio</label>
    <length>3</length>
    <type>Text</type>
</CustomField>